--- a/client/app/user/partials/consult_wf_payment.html
+++ b/client/app/user/partials/consult_wf_payment.html
@@ -74,6 +74,16 @@
 	              <button type="submit" class="btn btn-primary">Pay {{wf.paymentWF.expCurr}} {{totalFee}}</button>
 	            </form>
 
+	            <form>
+	                  
+	                <div class="form-group">
+	                	<p></p>
+	                    <a href="#/dashboard">I will pay later. Take me to my dashboard.</a>
+	                    
+	                </div>
+	                
+	            </form>
+
 	        </div>
 	    </div>
 
