--- a/client/app/user/partials/consult_wf_questions.html
+++ b/client/app/user/partials/consult_wf_questions.html
@@ -2,10 +2,29 @@
 
 	
 	<div class="row">
+		<div>
+			<h3>Upload your reports and answer questionnaire</h3>
+			<form action="{{uploadURL}}" enctype="multipart/form-data" method="post">
+                    Scans of lab reports, x-rays, previous prescriptions and other documents<br>
+                   
+               <!-- <input type="submit" value="Send"> -->
+               <div class="btn-group btn-group-sm" role="group" aria-label="...">
+                    <input type="file" ng-click="generateUploadURL()" name="uploaded_files" size="40">
+                    <button type="submit" class="btn btn-default">Upload</button>
+                </div>
+            </form>
+            
+            <ul class="list-group">
+                <li class="list-group-item" ng-if=" ! wf.patientDetailsWF.patientDocuments">If you have any previous reports or prescriptions that you want doctor to see, you can upload them here</li>
+                <li class="list-group-item" ng-repeat="aDocument in wf.patientDetailsWF.patientDocuments">
+    				<a target="_blank" href="/s/consult/cwf/{{wf._id}}/document/{{aDocument.fileBlobKey}}"><span>{{aDocument.fileName}}</span></a>
+                </li>
+            </ul>
+		</div>
 		
 		<div>
 	     
-	        <h3>Step 3: Patient Form</h3>
+	        <h3>Questionnaire</h3>
 	        <p/>
 	        <p>Please provide symptoms and other information below</p>
 	        <div>
