--- a/client/app/user/partials/login.html
+++ b/client/app/user/partials/login.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-lg-3" />
     <div class="col-lg-6" ng-controller="UserMainCtrl">
-        <h2> Login/Sign-in</h2>
+        <h2> </h2>
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Login/Sign-in</h3>
+                <h3 class="panel-title">Sign-in</h3>
             </div>
             <div class="panel-body">
                 
