--- a/client/app/user/partials/consult_wf.html
+++ b/client/app/user/partials/consult_wf.html
@@ -43,6 +43,10 @@
 		<div class="col-lg-3">
 			<h5>Reference No</h5>
 			<span class="text-primary">{{wf._id}}</span>
+			<div class="alert alert-warning" role="alert" ng-show="statusMsg">
+		        <button type="button" class="close" ng-click="closeStatusDisplay()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        {{statusMsg}}
+    		</div>
 		</div>
 		<div class="col-lg-6">
 			<div ui-view></div>
