--- a/client/app/user/partials/consultation_list.html
+++ b/client/app/user/partials/consultation_list.html
@@ -3,16 +3,68 @@
     <div class="main">
         <div>
             <h2 class="page-header">All Consultations</h2>
+            <ul class="nav nav-tabs">
+              <li role="presentation" class="{{defaultTimeTab=='HalfwayApptCreated'?'active':''}}"><a href ng-click="showMaybeHalfwayCreatedConsultations()">Maybe</a></li>
+              <li role="presentation" class="{{defaultTimeTab=='Past'?'active':''}}"><a href ng-click="showPastConsultations()">Past</a></li>
+              <li role="presentation" class="{{defaultTimeTab=='Recent'?'active':''}}"><a href ng-click="showRecentConsultations()">Recent</a></li>
+              <li role="presentation" class="{{defaultTimeTab=='Future'?'active':''}}"><a href ng-click="showFutureConsultations()">Future</a></li>
+              <li role="presentation" class="{{defaultTimeTab=='All'?'active':''}}"><a href ng-click="showAllConsultations()">All</a></li>
+            </ul>
             <div class="rowxxx placeholdersxxx">
+                <div class="" ng-show="timeSortedApptList.length == 0">
+                    You do not have any {{defaultTimeTab}} appointments.
+                </div>
                 <div class="col-sm-6sdsd placeholderxxx" ng-repeat="appt in timeSortedApptList">
                     <h4> &rsaquo; <a ui-sref="consult_wf.appt({ cref: appt._id })">Reference # {{appt._id}}</a> </h4>
                     <p> With <strong>{{appt.providerName}} </strong></p>
                     <p>On {{appt.apptWF.confirmedTS | date:'MMM d, y h:mm:ss a'}}</p>
                     
                     
-                    <p> Apppointment - <span class="text-muted">{{appt.apptWF.apptStatus | cwfFilter:'appt'}}</span> </p>
+                    <!-- <p> Apppointment - <span class="text-muted">{{appt.apptWF.apptStatus | cwfFilter:'appt'}}</span> </p>
                     <p> Payment - <span class="text-muted">{{appt.paymentWF.paymentStatus | cwfFilter:'payment'}}</span> </p>
-                    <p> Consultation - <span class="text-muted">{{appt.meetingWF.meetingStatus | cwfFilter:'meeting'}}</span> </p>
+                    <p> Consultation - <span class="text-muted">{{appt.meetingWF.meetingStatus | cwfFilter:'meeting'}}</span> </p> -->
+               
+
+
+                    <div class="form-inline">
+                        <div class="form-group">
+                            <label for="apptStatus">Appointment Status</label>
+                            <p class="form-control-static"><a ui-sref="consult_wf.appt({ cref: appt._id })">{{appt.apptWF.apptStatus | cwfFilter:'appt'}}</a></p>
+                        </div>
+                        <div class="form-group" ng-show="(appt | cwfStateTransitionAllowed : 'apptConfirmByUser' )">
+                            <label for="apptStatus">Doctor <span class="text-primary" data-animation="am-flip-x" bs-tooltip title="{{appt.apptWF.reasonChain.slice(-1).pop()}}">suggested</span> a different time - </label>
+                            <p class="form-control-static">{{appt.apptWF.proposedTS | date:'MMM d, y h:mm:ss a'}}</p>
+                            
+                            <button class="btn btn-info btn-xs" ng-click="confirmApptAtProposedTime(appt)">Confirm</button>
+                        </div>
+                    </div>
+                    <div class="form-inline">
+                        <div class="form-group">
+                            <label for="apptStatus">Payment Status</label>
+                            <p class="form-control-static">{{appt.paymentWF.paymentStatus | cwfFilter:'payment'}}</p>
+                        </div>
+                        <div class="form-group" ng-show="(appt | cwfStateTransitionAllowed : 'cwfPaymentByUser' )">
+                            <a class="btn btn-primary btn-xs" ui-sref="consult_wf.payment({ cref: appt._id })">Pay Now</a>
+                        </div>
+                    </div>
+
+                    <div class="form-inline">
+                        <div class="form-group">
+                            <label for="apptStatus">Meeting Status</label>
+                            <p class="form-control-static">{{appt.meetingWF.meetingStatus | cwfFilter:'meeting'}}</p>
+                        </div>
+                        <div class="form-group" ng-show="(appt | cwfStateTransitionAllowed : 'cwfGoToMeetingRoomByUser' )">
+                            <a type="button" class="btn btn-primary btn-xs" ng-click="gotoCRoom(appt)" ng-show="(appt | cwfStateTransitionAllowed : 'cwfGoToMeetingRoomByUser' )">Goto Consultation Room</a>
+                        </div>
+                    </div>
+                    <div class="form-inline">
+                        <div class="form-group">
+                            <label for="apptStatus">Reference</label>
+                            <p class="form-control-static"><a ui-sref="consult_wf.appt({ cref: appt._id })">{{appt._id}}</a></p>
+                        </div>
+                        
+                    </div>
+
                     <hr/>
                 </div>
             </div>
