--- a/client/app/user/partials/appt_request.html
+++ b/client/app/user/partials/appt_request.html
@@ -1,167 +1,247 @@
-<div class="container" ng-controller="ApptCtrl">
-	<h1> <span class="text-muted">New Consultation with </span> <a ui-sref="doc_profile({docId:{{providerId}}})">{{provider.name}}</a> </h1>
-	<!-- <div>
-		<div ng-repeat="timingSnippet in provider.timing">
-            <p>{{timingSnippet}}</p>
-        </div>
-    </div> -->
-	<hr class="featurette-divider">
-	<!-- <div class="row">
-		<div class="col-sm-2">
-			<img class="img-circle" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mM4+p/hLQAHAwKyxcxsuwAAAABJRU5ErkJggg==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
-			<span>Appointment</span>
-			
-		</div>
-		<div class="col-sm-2">
-			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
-			<span>Payment</span>
-		</div>
-		<div class="col-sm-2">
-			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
-			<span>Patient Form</span>
-		</div>
-		<div class="col-sm-2">
-			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
-			<span>Meeting</span>
-		</div>
-		<div class="col-sm-2">
-			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
-			<span>Prescription</span>
-		</div>
-		<div class="col-sm-2">
-			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 30px; height: 30px;">
-			<span>Feedback</span>
-		</div>
-	</div> -->
-	<!-- <div class="row">
-		<ul class="nav nav-pills">
-		  <li role="presentation" class="active"><a ui-sref="consult_wf.appt({ cref: wf._id })"><span class="glyphicon glyphicon-tag" aria-hidden="true">Appt  </span> </a> </li>
-		  <li role="presentation"><a href="#" disabled="disabled"><span class="glyphicon glyphicon-eur" aria-hidden="true">Payment  </span> </a></li>
-		  <li role="presentation"><a href="#" class="disabled"><span class="glyphicon glyphicon-tasks" aria-hidden="true">Questions</span></a></li>
-		  <li role="presentation"><a href="#" class="disabled"><span class="glyphicon glyphicon-headphones" aria-hidden="true">Meeting</span></a></li>
-		  <li role="presentation"><a href="#" class="disabled"><span class="glyphicon glyphicon-th-list" aria-hidden="true">Prescription</span></a></li>
-		  <li role="presentation"><a href="#" class="disabled"><span class="glyphicon glyphicon-comment" aria-hidden="true">Feedback</span></a></li>
-		</ul>
-	</div> -->
-	<hr class="featurette-divider">
-	<!-- <link rel="stylesheet" property="stylesheet" href="css/path/to/intlTelInput.css"> -->
-	<div class="row">
-		<div class="col-lg-3">
-			<h5>Reference No</h5>
-			<span class="text-primary">{{wf.reference}}</span>
-		</div>
-		<div class="col-lg-6">
-	        <!-- <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;"> -->
-	        <h3>Appointment</h3>
-	        <p/>
-	        <p>Select your preferred appointment time-window, and provide short information</p>
-	        <div>
-	            <form name="newapptform">
-	                <div class="form-inline">
-	                	<div class="form-group">
-						    <label for="appt-mode">Choose your consultation mode</label>
-						    <div class="radio">
-							  <label>
-							    <input type="radio" name="optionsRadiosCMode" id="optionsRadiosV" ng-model="wf.consult_mode_pref" value="video" ng-checked="wf.consult_mode_pref=='video' ">
-							    By Video <small><small>( Doctor will call on your computer at the time of appt consultation )</small></small>
-							  </label>
-							</div>
-							<div class="radio">
-							  <label>
-							    <input type="radio" name="optionsRadiosCMode" id="optionsRadiosP" ng-model="wf.consult_mode_pref"  value="phone">
-							    By Phone <small><small>( Doctor will call on your phone )</small></small>
-							  </label>
-							</div>
-							<!-- <div class="radio">
-							  <label>
-							    <input type="radio" name="optionsRadios" id="optionsRadios3" ng-model="wf.consult_mode_pref" value="anything">
-							    Try by video first, if not then by Phone
-							  </label>
-							</div> -->
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
+<head>
+<meta charset="UTF-8">
+	<title>Home  || RemedySquare </title>
+
+	<!-- responsive meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!-- master stylesheet -->
+	<link rel="stylesheet" href="css/style.css">
+	<!-- responsive stylesheet -->
+	<link rel="stylesheet" href="css/responsive.css">
+    <link rel="icon" href="../../favicon.ico">
+    <title>Remedy Square</title> 
+  
+</head>
+
+<body>
+    	<header class="header">
+		<div class="container">
+			<div class="logo pull-left">
+				<a href="index.html">
+					<img src="img/resources/" alt="Awesome Image"/>
+				</a>
+			</div>
+		</div>
+	</header> <!-- /.header -->
+
+
+	<nav class="mainmenu-area stricky">
+		<div class="container">
+			<div class="navigation pull-left">
+				<div class="nav-header">
+					<ul>
+						<li class="dropdown">
+							<a href="#">Home</a>
+						</li>
+						<li>
+							<a href="/user/index.html#/user/help">FAQ</a>
+						</li>
+						<li><a href="">Contact Us</a></li>
+						<li><a href="/user/index.html#/user/login">Login</a></li>
+						<li><a href="/user/index.html#/user/registration">Register</a></li>
+					</ul>
+				</div>
+				<div class="nav-footer">
+					<button><i class="fa fa-bars"></i></button>
+				</div>
+			</div>
+			<div class="search-box pull-right">
+				<form action="#">
+					<input type="text" placeholder="Search...">
+					<button type="submit"><i class="fa fa-search"></i></button>
+				</form>
+			</div>
+		</div>
+	</nav> <!-- /.mainmenu-area -->
+
+
+
+
+	<section class="inner-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 sec-title colored text-center">
+					<h2>Appointment</h2>
+					<ul class="breadcumb">
+						<li><a href="index.html">Home</a></li>
+						<li><i class="fa fa-angle-right"></i></li>
+						<li><span>Appointment</span></li>
+					</ul>
+					<span class="decor"><span class="inner"></span></span>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	
+	<section class="sec-padding contact-content appointment-content">
+		<div class="container">
+			<img src="img/resources/appointment.jpg" alt="Awesome Image"/>
+			<div class="title-box">
+				<span>It’s easy and fast</span>
+				<h3>Make an Appoinment</h3>
+				<p> <span class="text-muted">New Consultation with </span> <a ui-sref="doc_profile({docId:{{providerId}}})">{{provider.name}}</a> </p>				
+			</div>
+			<form action="" id="appointment-page-form" class="contact-form row">
+				<div class="col-md-7">
+					<div class="row">
+						<div class="col-md-6">
+							<input type="text" id="exampleInputName" ng-model="wf.patientName" name="name" placeholder="Full Name" required>
+							<input type="text" placeholder="Select Appointment Date" name="date" class="date-picker">
+							<input type="text" id="exampleInputPhone" name="e362Phone" data-phone ng-model="wf.patientPhone" placeholder="+919885566778" required ng-patternxx="/^\+\d{11}\d{1}?$/">
+							<span ng-show="newapptform.e362Phone.$error.phoneField">Please enter phone number in this format: +919885566778</span>
 						</div>
-	                </div>
-	                <div class="form-group"></div>
-	                <div class="form-inline">
-		                <div class="form-group required">
-		                    <label class="control-label"><i class="fa fa-calendar"></i>When</label> <small> ( See Doctor's <span class="text-primary" data-animation="am-flip-x" bs-tooltip title="{{prettyPrintedDocTiming}}">Timing</span> )</small><br>
-		                    <!-- <div class="form-group">
-		                      <input type="text" size="10" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
-		                      data-min-date="today" data-max-date="{{untilDate}}" placeholder="Date" bs-datepicker>
-		                    </div>
-		                    <div class="form-group">
-		                      <input type="text" size="8" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
-		                      placeholder="Time" bs-timepicker>
-		                    </div> -->
-		                    <div class="form-group">
-			                  <input type="text" class="form-control" ng-model="wf.requestedD" data-autoclose="1" 
-			                  data-min-date="today" data-max-date="{{untilDate}}" placeholder="Date" bs-datepicker required>
-			                </div>
-			                <div class="form-group">
-			                  <input type="text" class="form-control" ng-model="wf.requestedT" data-autoclose="1" bs-timepicker required>
-			                </div>
-		                </div>
-	            	</div>
-	            	<div class="form-group"></div>
-	            	<div class="form-inline">
-		            	<div class="form-group required">
-		                    <label for="exampleInputName" class="control-label">Name</label>
-		                    <input type="text" class="form-control" id="exampleInputName" ng-model="wf.patientName" placeholder="Enter Your Name" required>
-		                </div>
-		                <div class="form-group required">
-		                    <label for="exampleContactPhone" class="control-label">Phone</label>
-		                    <input type="text" class="form-control" id="exampleInputPhone" name="e362Phone" data-phone ng-model="wf.patientPhone" placeholder="+919885566778" required ng-patternxx="/^\+\d{11}\d{1}?$/">
-		                    <span ng-show="newapptform.e362Phone.$error.phoneField">Please enter phone number in this format: +919885566778</span>
-		                </div>
-	            	</div>
-	            	<div class="form-group"></div>
-	            	<div class="form-inline">
-		                <div class="form-group required">
-		                	<label for="exampleInputAge" class="control-label">Age</label>
-	                            <input type="text" class="form-control" id="exampleInputAge" ng-model="wf.age" placeholder="Your Age" required>
-	                    </div>
-		                <div class="form-group required">
-		                	<label for="exampleInputSex" class="control-label">Sex</label>
-                            <label>
-                            <input type="radio" name="optionsRadiosSex" id="optionsRadiosM" ng-model="wf.sex" value="M" checked />
-                            Male
-                            </label>
-                            <label>
-                            <input type="radio" name="optionsRadiosSex" id="optionsRadiosF" ng-model="wf.sex" value="F"/>
-                            Female
-                            </label>
-		                </div>
-	                </div>
-	                <div class="form-group"></div>
-	                
-	                <div class="form-group required">
-	                    <label for="problemDesc" class="control-label">Reason for your appointment ( in short )</label>
-	                    <textarea class="form-control" id="problemDesc" rows="4" ng-model="wf.problemSummary" required></textarea>
-	                </div>
+						<div class="col-md-6">
+							<input type="text" name="email" placeholder="Email">
+							<div class="select-input-wrapper">
+								<select class="select-input" name="category">
+									<option value="" selected="selected">Consultation Mode</option>
+									<option value="General Motors">Video Consultation</option>
+								   <option value="General Motors">Audio Consultation</option>
+								</select>
+							</div>
+							<div class="clearfix half-wrapper">
+								<div class="col-md-6 p0 half">
+									<div class="select-input-wrapper">
+										<select class="select-input" name="gender">
+											<option value="" selected="selected">Select Gender</option>
+											<option value="General Motors">Male</option>
+											<option value="General Motors">Female</option>
+										</select>
+									</div>										
+								</div>
+								<div class="col-md-6 p0 half">
+									<input type="text" placeholder="Age" id="exampleInputAge" ng-model="wf.age" placeholder="Your Age" required>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+				</div>
+				<div class="col-md-5">
+					<textarea name="message" placeholder="Message" cols="30" rows="10"></textarea>
+				</div>
+				<div class="col-md-12"><button type="submit">Book Now</button></div>
+			</form>
+		</div>
+	</section>
+	
 
-	                <!-- <button type="submit" class="btn btn-primary" ng-click="gotoPayment()">Pay Rs. 200</button> -->
-	                <a class="btn btn-primary" ng-click="requestAppt()">Next Step</a>
-	                <p class="text-warning">{{errMsg}}</p>
-	            </form>
-	            <!-- Modal -->
-	            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	              <div class="modal-dialog modal-lg">
-	                <div class="modal-content">
-	                  <div class="modal-body">
-	                    <h3>Click on the available time slot</h3>
-	                    <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
-	                  </div>
-	                  <div class="modal-footer">
-	                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	                    <button type="button" class="btn btn-primary">Save changes</button>
-	                  </div>
-	                </div>
-	              </div>
-	            </div>
 
-	        </div>
-	    </div>
-	    <div class="col-lg-3"/>
+	<section class="footer-call-to-action">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-9">
+					<h3>Remedysquare.com</h3>
+					<p>Get appointment now and gain points</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<footer class="footer sec-padding">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<div class="footer-widget about-widget">
+						<a href="#">
+							<img src="img/resources/" alt="Awesome Image"/>
+						</a>
+						<p>Little explanation  Little explanation  Little explanation  Little explanation  </p>
+						<ul class="contact">
+							<li><i class="fa fa-map-marker"></i> <span>60 . Airport Road, Bengaluru</span></li>
+							<li><i class="fa fa-phone"></i> <span>(000) 000 000 0000</span></li>
+							<li><i class="fa fa-envelope-o"></i> <span>example@gmail.com</span></li>
+						</ul>
+						<ul class="social">
+							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+							<li><a href="#"><i class="fa fa-youtube"></i></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="footer-widget contact-widget">
+						<h3 class="title">Contact Form</h3>
+						<form action="" class="contact-form" id="footer-cf">
+							<input type="text" name="name"  placeholder="Full Name">
+							<input type="text" name="email" placeholder="Email Address" >
+							<textarea name="message" placeholder="Your Message"></textarea>
+							<button type="submit">Send</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	
+	<section class="footer-bottom">
+		<div class="container text-center">
+			<p> © Copyright 2016 Remedy square <a href="/policy/privacy.html">Privacy</a> | <a href="/policy/utc.html">Terms</a> | <a href="/pgm/provider_landing/index.html">Are You Doctor?</a></p>
+		</div>
+	</section>
 
-    </div>
-</div>
+
+	<!-- main jQuery -->
+	<script src="js/jquery-1.11.1.min.js"></script>
+	<!-- bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- bx slider -->
+	<script src="js/jquery.bxslider.min.js"></script>
+	<!-- appear js -->
+	<script src="js/jquery.appear.js"></script>
+	<!-- count to -->
+	<script src="js/jquery.countTo.js"></script>
+	<!-- owl carousel -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- validate -->
+	<script src="js/validate.js"></script>
+	<!-- mixit up -->
+	<script src="js/jquery.mixitup.min.js"></script>
+	<!-- fancybox -->
+	<script src="js/jquery.fancybox.pack.js"></script>
+	<!-- easing -->
+	<script src="js/jquery.easing.min.js"></script>
+	<
+	<!-- gmap main script -->
+	<script src="js/gmap.js"></script>
+
+	<!-- isotope script -->
+	<script src="js/isotope.pkgd.min.js"></script>
+	<!-- jQuery ui js -->
+	<script src="js/jquery-ui-1.11.4/jquery-ui.js"></script>
+	
+	<!-- revolution scripts -->
+
+	<script src="revolution/js/jquery.themepunch.tools.min.js"></script>
+	<script src="revolution/js/jquery.themepunch.revolution.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.actions.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.migration.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.video.min.js"></script>
+
+
+	
+	<script src="js/custom.js"></script>
+
+
+
+</body>
+
+</html>
