--- a/client/app/user/partials/doctor_profile.html
+++ b/client/app/user/partials/doctor_profile.html
@@ -1,26 +1,3 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
-
-<head>
-<meta charset="UTF-8">
-	<title>Doctor Profile || RemedySquare </title>
-
-	<!-- responsive meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<!-- master stylesheet -->
-	<link rel="stylesheet" href="css/style.css">
-	<!-- responsive stylesheet -->
-	<link rel="stylesheet" href="css/responsive.css">
-    <link rel="icon" href="../../favicon.ico">
-    <title>Remedy Square</title> 
-  
-</head>
 
 <body>
     	<header class="header">
@@ -232,7 +209,7 @@
 			<div class="row">
 				<div class="col-md-9">
 					<h3>RemedySquare.com </h3>
-					<p>Little explanation  Little explanation  Little explanation ...</p>
+					<p>A Unique Platform Where You Can Meet Doctors On The Go</p>
 				</div>
 			</div>
 		</div>
