trusted doc workflow, meeting completion and consultation completion

--- a/client/app/user/partials/consult_wf_appt.html
+++ b/client/app/user/partials/consult_wf_appt.html
@@ -12,10 +12,10 @@
         </div>
         <div class="form-group">
             <!-- <a class="btn btn-primary btn-xs" ng-show="(wf | cwfStateTransitionAllowed : 'apptConfirmByUser' )" ng-click="confirmCwf(wf)">Confirm Proposed Time</a> -->
-            <a class="btn btn-danger btn-xs" ng-show="(wf | cwfStateTransitionAllowed : 'apptCancelByUser' )" ng-click="cancelCwf(wf)">Cancel Appointment</a>
+            <!-- <a class="btn btn-danger btn-xs" ng-show="(wf | cwfStateTransitionAllowed : 'apptCancelByUser' )" ng-click="cancelCwf(wf)">Cancel Appointment</a> -->
         </div>
         <div class="form-group" ng-show="(wf | cwfStateTransitionAllowed : 'apptConfirmByUser' )">
-            <label for="apptStatus">or, Reschedule your appointment </label>
+            <label for="apptStatus">Reschedule your appointment </label>
         </div>
     </div>
 
