--- a/client/app/user/partials/consultation_list.html
+++ b/client/app/user/partials/consultation_list.html
@@ -60,7 +60,7 @@
                     <div class="form-inline">
                         <div class="form-group">
                             <label for="apptStatus">Reference</label>
-                            <p class="form-control-static"><a ui-sref="consult_wf.appt({ cref: appt._id })">{{appt._id}}</a></p>
+                            <p class="form-control-static"><a ui-sref="consult_wf.appt({ cref: appt._id, from_state:'consultation_list' })">{{appt._id}}</a></p>
                         </div>
                         
                     </div>
