--- a/client/app/user/partials/consult_wf.html
+++ b/client/app/user/partials/consult_wf.html
@@ -9,7 +9,13 @@
 		  <li role="presentation" ui-sref-active="active"><a ng-click="gotoCRoom(wf)" ng-show="(wf | cwfStateTransitionAllowed : 'cwfGoToMeetingRoomByUser' ) "><i class="fa fa-television fa-2x"></i>Meeting</a><a ng-show="!(wf | cwfStateTransitionAllowed : 'cwfGoToMeetingRoomByUser' ) ">Meeting</a></li>
 		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.prescription({ cref: wf._id })" ng-show="(wf | cwfStateTransitionAllowed : 'cwfGoToPrescriptionByUser' ) "><i class="fa fa-file-text fa-2x"></i>Prescription</a><a ng-show="!(wf | cwfStateTransitionAllowed : 'cwfGoToPrescriptionByUser' ) ">Prescription</a></li>
 		  <li role="presentation" ui-sref-active="active"><a href="#" ng-show="(wf | cwfStateTransitionAllowed : 'cwfFeedbackByUser' ) "><i class="fa fa-comment fa-2x"></i>Feedback</a></li>
+		  <li class="navbar-right" role="presentation"><button type="button" class="btn" ng-click="cancelCwf(wf)" ng-show="wf | cwfStateTransitionAllowed : 'apptCancelByUser' ">Cancel this consultation</button></li>
+
+          <li class="navbar-right" role="presentation"><button type="button" class="btn" ng-click="markConsultationAsComplete()" ng-show="wf | cwfStateTransitionAllowed : 'cwfDoneByUser' ">Mark consultation as complete</button></li>
+            
 		</ul>
+
+		
 	</div>
 	<!-- <div class="row">
 		<div class="col-sm-2">
