--- a/client/app/user/partials/help.html
+++ b/client/app/user/partials/help.html
@@ -1,7 +1,7 @@
 <div>
   <div class="list-group">
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">1. How does ERemedy select doctors?</h4>
+      <h4 class="list-group-item-heading">1. How does Remedy7 select doctors?</h4>
       <p class="list-group-item-text">By stringent process...</p>
     </a>
     
@@ -28,6 +28,24 @@
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">4. What are payment options available?</h4>
       <p class="list-group-item-text">You can pay either through credit card or debit card or net banking.</p>
+    </a>
+
+  </div>
+
+  <div class="list-group">
+    
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">5. When do I need to pay?</h4>
+      <p class="list-group-item-text">You can pay anytime after your appointment and 2 hours before the appointment time. Appointment consultation link will not be available if the payment has not been made at least 2 hours before.</p>
+    </a>
+
+  </div>
+
+  <div class="list-group">
+    
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">5. Can I reschedule an appointment after I have made the payment?</h4>
+      <p class="list-group-item-text">Yes, you can reschedule the appointment anytime.</p>
     </a>
 
   </div>
