--- a/client/app/user/provider.css
+++ b/client/app/user/provider.css
@@ -104,7 +104,8 @@ body {
   border-radius: 50%;
 }
 .r7navbar {
-  background-color: red;
+  /*background-color: red;*/
+  background-color: black;
   
 }
 
